--- a/slide.html
+++ b/slide.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="content" id="content">
-      <div class="slide visible-slide" style="text-align: center;">
+      <div class="slide visible-slide">
         <h1 class="yellow-text" style="font-size: 64px; margin-top: 120px">
           JavaScript
         </h1>
@@ -21,14 +21,14 @@
         </h1>
       </div>
 
-      <div class="slide" style="text-align: center;">
+      <div class="slide">
         <h1 class="yellow-text" style="font-size: 64px; margin-top: 120px">
           JavaScript
         </h1>
         <h1 class="yellow-text" style="font-size: 64px; margin-top: 20px">
           Minus JavaScript
         </h1>
-        <h2 class="white-text blue-background " style="margin-top: 15px; font-size: 72px;">
+        <h2 class="white-text red-background " style="margin-top: 15px; font-size: 72px;">
           + Star Wars!
         </h2>
       </div>
@@ -48,78 +48,124 @@
           </span>
         </p>
 
-        <p class="yellow-text">
+        <h2 class="white-text red-background " style="margin-top: 15px; font-size: 72px;">
           BuzzFeed
-        </p>
-
+        </h2>
       </div>
 
-      <div class="slide" style="text-align: center;">
+      <div class="slide">
         <img style="max-width: 100%;" src="images/star_wars_technology.gif">
       </div>
 
-      <div class="slide" style="text-align: center;">
-        <h2 class="yellow-text" style="margin-top: 120px">
-          Tonight's theme is the same as always:
-        </h2>
-        <h1 class="yellow-text" style="font-size: 64px; margin-top: 120px">
-          Please use your powers for good.
+      <div class="slide">
+        <h1 class="yellow-text" style="font-size: 116px; margin-top: 120px">
+          3 Reasons Star Wars Helps Us Understand Web Development
         </h1>
       </div>
 
-      <div class="slide" style="text-align: center;">
+      <div class="slide">
+        <ol style="margin-top: 50px; font-size: 36px;">
+          <li>
+            Reminds us to use our powers for good.
+          </li>
+        </ol>
+      </div>
+
+      <div class="slide">
+        <ol style="margin-top: 50px; font-size: 36px;">
+          <li>
+            Reminds us to use our powers for good.
+          </li>
+          <li>
+            Opens up a vast world of magic and adventure.
+          </li>
+        </ol>
+      </div>
+
+      <div class="slide">
+        <ol style="margin-top: 50px; font-size: 36px;">
+          <li>
+            Reminds us to use our powers for good.
+          </li>
+          <li>
+            Opens up a vast world of magic and adventure.
+          </li>
+          <li>
+            Isn't it kind of crazy that we do this instead of working on spaceships?
+          </li>
+        </ol>
+      </div>
+
+      <div class="slide">
         <div style="top: 25%; transform: translateY(-50%); position: relative;">
           <iframe width="420" height="315" src="https://www.youtube.com/embed/Q1shS90thpA" frameborder="0" allowfullscreen></iframe>
         </div>
       </div>
 
-      <div class="slide" style="text-align: center;">
+      <div class="slide">
         <h1 class="yellow-text" style="font-size: 116px; margin-top: 120px">
           Does your website work without JavaScript?
         </h1>
       </div>
 
-      <div class="slide" style="text-align: center;">
-        <img style="max-width: 100%;" src="images/rtr_grid.png">
+      <div class="slide">
+        <img style="max-width: 100%;" src="images/tone_down_the_javascript.png">
       </div>
 
-      <div class="slide" style="text-align: center;">
-        <img style="display: inline-block;" src="images/john.png" >
-        <img style="display: inline-block;" src="images/will.png" >
+      <div class="slide">
+        <img style="max-width: 100%;" src="images/javascript-first-web-dev.png">
       </div>
 
-      <div class="slide" style="text-align: center;">
-        <img style="max-width: 100%;" src="images/star_destroyer_bridge.jpg">
+      <div class="slide">
+        <h1 class="yellow-text" style="font-size: 116px; margin-top: 120px">
+          There are two kinds of Web out there.
+        </h1>
       </div>
 
-      <div class="slide" style="text-align: center;">
+      <div class="slide">
+        <h1 class="yellow-text" style="font-size: 116px; margin-top: 120px">
+          E-commerce has one set of needs.
+        </h1>
+      </div>
+
+      <div class="slide">
         <img style="max-width: 100%; top: 25%; transform: translateY(-50%); position: relative;" src="images/star_destroyer.gif">
       </div>
 
-      <div class="slide" style="text-align: center;">
+      <div class="slide">
+        <h1 class="yellow-text" style="font-size: 116px; margin-top: 120px">
+          The "read-only web" has quite another.
+        </h1>
+      </div>
+
+      <div class="slide">
+        <img style="max-width: 100%;" src="images/rey_uses_force.gif">
+      </div>
+
+      <div class="slide">
         <h1 class="yellow-text" style="font-size: 64px; margin-top: 120px">
           Did someone make you reimplement scrolling just to style the scroll bar?
         </h1>
       </div>
 
-      <div class="slide" style="text-align: center;">
+      <div class="slide">
         <video controls="controls" width="800" height="600" name="No URL" src="video/custom_scroll_behavior.mov">
         </video>
       </div>
 
-      <div class="slide" style="text-align: center;">
+      <div class="slide">
         <h1 class="yellow-text" style="margin-top: 120px; font-size: 64px;">
           Ignoring accessibility is a sure path to the dark side!
         </h1>
       </div>
 
-      <div class="slide" style="text-align: center;">
+      <div class="slide">
         <h1 class="yellow-text" style="font-size: 64px; margin-top: 120px">
           Does that functionality really need to live in a modal?
         </h1>
       </div>
 
-      <div class="slide" style="text-align: center;">
+      <div class="slide">
         <h1 class="yellow-text" style="font-size: 64px; margin-top: 120px">
           Does that functionality really need to live in a modal?
         </h1>
@@ -128,116 +174,157 @@
         </h2>
       </div>
 
-      <div class="slide" style="text-align: center;">
+      <div class="slide">
         <video controls="controls" width="800" height="600" name="No URL" src="video/no_url.mov">
         </video>
       </div>
 
-      <div class="slide" style="text-align: center;">
-        <h1 class="yellow-text" style="font-size: 64px; margin-top: 120px">
-          Good routing is your only hope of creating a maintainable website
-        </h1>
-      </div>
-
-      <div class="slide" style="text-align: center;">
+      <div class="slide">
         <div style="top: 25%; transform: translateY(-50%); position: relative;">
           <iframe width="560" height="315" src="https://www.youtube.com/embed/xIFJLMyUwrg" frameborder="0" allowfullscreen></iframe>
         </div>
       </div>
 
-      <div class="slide" style="text-align: center;">
+      <div class="slide">
+        <h1 class="yellow-text" style="font-size: 64px; margin-top: 120px">
+          Good routing is your only hope of creating a maintainable website.
+        </h1>
+        <h2 class="white-text blue-background " style="margin-top: 15px; font-size: 24px;">
+          The URL must change to reflect what's on the page, or you've dealt a heavy blow to accessibilty -- both for yourself and your users.
+        </h2>
+      </div>
+
+      <div class="slide">
         <h1 class="yellow-text" style="margin-top: 120px; font-size: 64px;">
           The only way to make the thing work is to spin up an entire instance of your JavaScript app and have it execute error-free?
         </h1>
       </div>
 
-      <div class="slide" style="text-align: center;">
-        <div style="top: 25%; transform: translateY(-50%); position: relative;">
-          <iframe width="420" height="315" src="https://www.youtube.com/embed/Drkh0YLF8rI" frameborder="0" allowfullscreen></iframe>
-        </div>
-      </div>
-
-      <div class="slide" style="text-align: center;">
+      <div class="slide">
         <div style="top: 25%; transform: translateY(-50%); position: relative;">
           <img style="max-width: 100%;" src="images/sarlacc.gif">
         </div>
       </div>
 
-      <div class="slide" style="text-align: center;">
-        <h1 class="yellow-text" style="font-size: 64px; margin-top: 120px; margin-left: 100px; margin-right: 100px;">
-          For the love of god, won't someone think of the robots?
-        </h1>
-      </div>
-
-      <div class="slide" style="text-align: center;">
-        <div style="top: 25%; transform: translateY(-50%); position: relative;">
-          <img style="max-width: 100%;" src="images/human_behavior.gif">
-        </div>
-      </div>
-
-      <div class="slide" style="text-align: center;">
+      <div class="slide">
         <div style="top: 25%; transform: translateY(-50%); position: relative;">
           <img style="max-width: 100%;" src="images/dont_get_technical.gif">
         </div>
       </div>
 
-      <div class="slide" style="text-align: center;">
-        <h1 class="yellow-text" style="font-size: 64px; margin-top: 120px; margin-right: 40px; margin-left: 40px;">
-          Do you know when you have a JavaScript error?
+      <div class="slide">
+        <h1 class="yellow-text" style="font-size: 64px; margin-top: 120px; margin-left: 100px; margin-right: 100px;">
+          These Robots Tried to Read Your Website, and It Was Really Hard
         </h1>
       </div>
 
-      <div class="slide" style="text-align: center;">
+      <div class="slide">
         <div style="top: 25%; transform: translateY(-50%); position: relative;">
-          <img style="max-width: 100%;" src="images/taken_care_of_everything.gif">
+          <img style="max-width: 100%;" src="images/human_behavior.gif">
         </div>
       </div>
 
-      <div class="slide" style="text-align: center;">
-        <h1 class="yellow-text" style="font-size: 64px; margin-top: 120px; margin-right: 40px; margin-left: 40px;">
-          Do you know when you have a JavaScript error?
-        </h1>
-        <h2 class="white-text blue-background " style="margin-top: 15px; font-size: 24px;">
-          I don't believe you but ok
-        </h2>
-      </div>
-
-      <div class="slide" style="text-align: center;">
-        <div style="top: 25%; transform: translateY(-50%); position: relative;">
-          <iframe width="420" height="315" src="https://www.youtube.com/embed/UYZoxY3sawE" frameborder="0" allowfullscreen></iframe>
-        </div>
-      </div>
-
-      <div class="slide" style="text-align: center;">
-        <h1 class="yellow-text" style="font-size: 64px; margin-top: 120px">
-          Do your endpoints respond in a format that isn't JSON?
+      <div class="slide">
+        <h1 class="yellow-text" style="font-size: 64px; margin-top: 120px; margin-left: 100px; margin-right: 100px;">
+          4 Cool Tips for Isomorphic JavaScript
         </h1>
       </div>
 
-      <div class="slide" style="text-align: center;">
+      <div class="slide">
+        <ol class="yellow-text" style="margin-top: 50px; font-size: 36px;">
+          <li>
+            Create a mapping between page state and URL.
+          </li>
+          <li>
+            Kick off AJAX requests based on user action once page is fully loaded.
+          </li>
+          <li>
+            Conditionally render HTML or JSON depending on request headers.
+          </li>
+          <li>
+            Don't forget the back button! The History API is a webapp developer's best friend.
+          </li>
+        </ol>
+      </div>
+
+      <div class="slide">
         <img style="max-width: 100%;" src="images/respond_to_both.png">
         <!-- xhr is literally just a header -->
       </div>
 
-      <div class="slide" style="text-align: center;">
+      <div class="slide">
         <h1 class="yellow-text" style="font-size: 64px; margin-top: 120px">
-          Be a hero. Adopt serverside rendering.
+          We Tried Serverside Rendering, and Couldn't Believe the Speed Gains
         </h1>
+        <h2>
+          Initial page loads were 50% faster without the round trip.
+        </h2>
       </div>
 
-      <div class="slide" style="text-align: center;">
+      <div class="slide">
         <video controls="controls" height="600" name="Late Rendering NYTimes" src="video/late_rendering.mov">
         </video>
       </div>
 
-      <div class="slide" style="text-align: center;">
+      <div class="slide">
         <div style="top: 25%; transform: translateY(-50%); position: relative;">
           <img style="max-width: 100%;" src="images/han_shot_first.gif">
         </div>
       </div>
 
       <div class="slide">
-        <ul class="yellow-text" style="margin-top: 50px; list-style: none; font-size: 36px;">
+        <h1 class="yellow-text" style="font-size: 64px; margin-top: 120px; margin-right: 40px; margin-left: 40px;">
+          Do you know when you have a JavaScript error?
+        </h1>
+      </div>
+
+      <div class="slide">
+        <div style="top: 25%; transform: translateY(-50%); position: relative;">
+          <img style="max-width: 100%;" src="images/taken_care_of_everything.gif">
+        </div>
+      </div>
+
+      <div class="slide">
+        <h1 class="yellow-text" style="font-size: 64px; margin-top: 120px; margin-right: 40px; margin-left: 40px;">
+          Do you know when you have a JavaScript error?
+        </h1>
+        <h2 class="white-text blue-background " style="margin-top: 15px; font-size: 24px;">
+          Serverside stack traces are a lot more fun.
+        </h2>
+      </div>
+
+      <div class="slide">
+        <h1 class="yellow-text" style="font-size: 64px; margin-top: 120px">
+          Why People Won't Shut Up About Serverside Rendering
+        </h1>
+      </div>
+
+      <div class="slide">
+        <h1 class="yellow-text" style="font-size: 64px; margin-top: 120px">
+          Why People Won't Shut Up About Serverside Rendering
+        </h1>
+        <h2 clas="red-background white-text">
+          But what should we render on the server? Everything?
+        </h2>
+      </div>
+
+      <div class="slide">
+        <div style="position: relative;">
+          <img style="max-width: 100%;" src="images/state_of_serverside.png">
+        </div>
+      </div>
+
+      <div class="slide">
+        <h1 class="yellow-text" style="font-size: 64px; margin-top: 120px; margin-right: 40px; margin-left: 40px;">
+          6 Surprising Tips for Saving Yourself from JavaScript
+        </h1>
+      </div>
+
+      <div class="slide">
+        <ol class="yellow-text" style="margin-top: 50px; font-size: 28px;">
+          <li>
+            Try a golden path integration test case that runs withtout JavaScript enabled.
+          </li>
           <li>
             Infinite scrolling? Keep a "More" link.
           </li>
@@ -249,35 +336,41 @@
             Forms? Keep their method and action attributes and make sure you'll get a response.
           </li>
           <li>
-            Never reimplement functionality browsers implement better
+            Never reimplement functionality browsers implement better. Loading a single HTML document with 50 images may be murder on your servers, but your user's devices are optimized for it.
           </li>
           <li>
             Maybe your acceptance tests suck because everything is implemented with AJAX?
           </li>
-        </ul>
+        </ol>
       </div>
 
-      <div class="slide" style="text-align: center;">
-        <h1 class="yellow-text" style="font-size: 116px; margin-top: 120px">
+      <div class="slide">
+        <h1 class="yellow-text" style="font-size: 96px; margin-top: 120px">
           You have one job: render comprehensible HTML quickly.
         </h1>
       </div>
 
-      <div class="slide" style="text-align: center;">
+      <div class="slide">
         <img style="max-width: 100%;" src="images/dont_even.jpg">
       </div>
 
-      <div class="slide" style="text-align: center;">
+      <div class="slide">
+        <h1 class="yellow-text" style="font-size: 96px; margin-top: 120px">
+          JavaScript can make your life easier. It is not the best tool for every job.
+        </h1>
+      </div>
+
+      <div class="slide">
         <h1 class="yellow-text" style="font-size: 84px; margin-top: 120px">
           DISREGARDING ALL OF THIS ADVICE IS A SURE PATH TO THE DARK SIDE OF THE FORCE.
         </h1>
       </div>
 
-      <div class="slide" style="text-align: center;">
+      <div class="slide">
         <img style="max-width: 100%;" src="images/bad_badness.gif">
       </div>
 
-      <div class="slide" style="text-align: center;">
+      <div class="slide">
         <h1 class="yellow-text" style="font-size: 84px; margin-top: 120px">
           DISREGARDING ALL OF THIS ADVICE IS A SURE PATH TO THE DARK SIDE OF THE FORCE.
         </h1>
@@ -286,17 +379,17 @@
         </h2>
       </div>
 
-      <div class="slide" style="text-align: center;">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/wgpytjlW5wU" frameborder="0" allowfullscreen></iframe>
+      <div class="slide">
+        <img style="max-width: 100%;" src="images/only_a_sith.jpg">
       </div>
 
-      <div class="slide" style="text-align: center;">
+      <div class="slide">
         <h1 class="yellow-text" style="font-size: 64px; margin-left: 60px; margin-top: 120px">
           Mobile first? Sure. And JavaScript last.
         </h1>
       </div>
 
-      <div class="slide" style="text-align: center;">
+      <div class="slide">
         <h1 class="yellow-text" style="font-size: 64px; margin-left: 60px;">
           Thanks for listening!
         </h1>
